// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border prop 1`] = `
<div class="ca2-cell ca2-cell--center ca2-cell--borderless ca2-switch-cell">
  <div class="ca2-cell__value ca2-cell__value--alone">
    <div role="switch" aria-checked="false" class="ca2-switch" style="font-size: 24px;">
      <div class="ca2-switch__node"></div>
    </div>
  </div>
</div>
`;

exports[`cell-size prop 1`] = `
<div class="ca2-cell ca2-cell--center ca2-cell--large ca2-switch-cell ca2-switch-cell--large">
  <div class="ca2-cell__value ca2-cell__value--alone">
    <div role="switch" aria-checked="false" class="ca2-switch" style="font-size: 24px;">
      <div class="ca2-switch__node"></div>
    </div>
  </div>
</div>
`;
